--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-#Ignorando ficheros
-*.sql
-*.log
-*.txt
-*.pdf
-*.PDF	
+/web/bundles/
+/web/uploads/
+/app/bootstrap.php.cache
+/app/cache/*
+/app/config/parameters.yml
+/app/logs/*
+!app/cache/.gitkeep
+!app/logs/.gitkeep
+/app/phpunit.xml
+/build/
+/vendor/
+/bin/
+/composer.phar
